--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/hosted-git-info": "3.0.5",
     "@types/node": "24.10.0",
     "@types/react": "19.2.2",
+    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "9.39.1",
     "husky": "9.1.7",
     "lint-staged": "16.2.6",
