Remove --frozen-lockfile from ci.yaml (used as default)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
           node-version-file: .tool-versions
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
 
       - name: Run pnpm lint:eslint
         if: ${{ success() || failure() }}
